드롭ㅂ빠/terraform-projects/applications/cicd/sample-application-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sample-application-argocd
