드롭ㅂ빠/terraform-projects/applications/cicd/sample-application-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: sample-application-argocd
  name: sample-application-service
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app
